--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,19 @@
 
 @theme {
   --color-primary: theme(--color-blue-500);
-  --color-bg: #FDFDFD;
+  --color-bg: theme(--color-neutral-950)
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+  color: white;
+}
+
+.header {
+  background: RGB(0, 166, 244);
+  background: linear-gradient(90deg,rgba(0, 166, 244, 1) 34%, #162456 100%);
+}
+
+.box {
+ @apply bg-neutral-900 border border-neutral-800 rounded-xl p-6; 
 }
