--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,23 @@ body {
 .box {
  @apply bg-neutral-900 border border-neutral-800 rounded-xl p-6; 
 }
+
+::-webkit-scrollbar {
+  width: 10px ;
+  height: 10px  ;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: theme(--color-neutral-700);
+  border-radius: 10px;
+  border: 3px solid var(--scrollbar-bg); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-neutral-600);
+}
