--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ body {
  @apply bg-neutral-900 border border-neutral-800 rounded-xl p-6; 
 }
 
+.input-outline {
+  @apply focus:outline-none focus:ring-1 focus:ring-blue-500;
+}
+
 ::-webkit-scrollbar {
   width: 10px ;
   height: 10px  ;
