--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 .box {
- @apply bg-neutral-900 border border-neutral-800 rounded-xl p-6; 
+ @apply bg-neutral-900 border border-neutral-800 rounded-xl p-4 sm:p-6; 
 }
 
 .input-outline {
